<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FaceArDemo</string>
    <string name="main_text_start">启动人脸Demo</string>

    <string name="bdar_string_sticker">贴纸</string>
    <string name="bdar_string_beauty">美颜</string>
    <string name="bdar_string_whitening">美白</string>
    <string name="bdar_string_dermabrasion">磨皮</string>
    <string name="bdar_string_big_eyes">大眼</string>
    <string name="bdar_string_face_lift">瘦脸</string>

    <string name="bdar_record_error">录制失败</string>
    <string name="bdar_record_completing">正在生成视频...</string>
    <string name="bdar_video_saving">正在保存视频...</string>
    <string name="bdar_upload_error">上传失败</string>
    <string name="bdar_audio_permission_dialog_title">是否录制有声视频</string>
    <string name="bdar_audio_permission_dialog_context">将获取您的麦克风权限，以便录制有声视频</string>

    <string name="bdar_capture_pic">拍摄</string>
    <string name="bdar_capture_video">录制</string>
    <string name="bdar_save_finish">已保存到相册</string>
    <string name="bdar_save_fail">保存失败，该文件已被删除</string>
    <string name="bdar_video_recording_too_short">录制过短，请重新录制</string>

    <string name="bdar_all_permission">权限申请</string>
    <string name="bdar_all_description_for_android_m_above">没有权限进行下一步操作，请在设置中开启</string>
    <string name="bdar_go_setting">前往设置</string>


</resources>